<resources>
    <string name="app_name">Lab05 - Lifecycle</string>
    <string name="oncreate">onCreate()</string>
    <string name="onstart">onStart()</string>
    <string name="onresume">onResume()</string>
    <string name="onpause">onPause()</string>
    <string name="onstop">onStop()</string>
    <string name="onrestart">onRestart()</string>
    <string name="ondestroy">onDestroy()</string>
    <string name="reset">RESET</string>
    <string name="run_count_0">run count: 0</string>
</resources>
